# melia

./: .gitignore  main.py  pyproject.toml
cli/: main.py
engine/: main.py
fastapi_starter/app/: main.py
output/fastapi_starter/app/: main.py
template/: main.py
templates/fastapi_starter/: .env.example  pyproject.toml  tree.json
templates/fastapi_starter/app/: __init__.py
templates/fastapi_starter/app/api/endpoints/: auth.py
templates/fastapi_starter/app/core/: security.py  settings.py
templates/fastapi_starter/app/models/: user.py
templates/fastapi_starter/app/schemas/: user.py
