[project]
name = "melia"
version = "0.1.0"
description = "fastapi project generator and servicemanager"
authors = [
    {name = "el hadji",email = "elhadji.sarr@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click (>=8.2.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
